--- a/ingress.yaml
+++ b/ingress.yaml
@@ -14,3 +14,7 @@ spec:
                 name:  wordpress
                 port:
                   number: 80
+        tls:
+  - hosts:
+    - chris.farhood.org
+    secretName: farhood-org-cert-letsencrypt-prod
