--- a/ingress.yaml
+++ b/ingress.yaml
@@ -4,16 +4,14 @@ metadata:
   name: chris.farhood.org
 spec:
   rules:
-    - host: chris.farhood.org
-      http:
-        paths:
-          - path: /
-            pathType: Exact
-            backend:
-              service:
-                name:  wordpress
-                port:
-                  number: 80
+  - host: chris.farhood.org
+    http:
+      paths:
+      - backend:
+          service:
+            name:  wordpress
+            port:
+              number: 80
   tls:
   - hosts:
     - chris.farhood.org
