--- a/ingress.yaml
+++ b/ingress.yaml
@@ -7,13 +7,13 @@ spec:
   - host: chris.farhood.org
     http:
       paths:
-      - backend:
+      - path: /
+        pathType: Prefix
+        backend:
           service:
             name:  wordpress
             port:
               number: 80
-        path: /
-        pathType: Prefix
   tls:
   - hosts:
     - chris.farhood.org
