--- a/deployment-wordpress.yaml
+++ b/deployment-wordpress.yaml
@@ -1,21 +1,17 @@
-#---
-#apiVersion: v1
-#kind: Service
-#metadata:
-#  name: wordpress
-#  annotations: {}
-#    #metallb.universe.tf/loadBalancerIPs: 0.0.0.0
-#    #external-dns.alpha.kubernetes.io/hostname: bodega.farhoodliquor.com.
-#  labels:
-#   app: wordpress
-#spec:
-#  ports:
-#    - port: 80
-#  selector:
-#    app: wordpress
-#    tier: web
-#  type: LoadBalancer
-
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: wordpress
+  labels:
+   app: wordpress
+spec:
+  ports:
+    - port: 80
+  selector:
+    app: wordpress
+    tier: web
+  clusterIP: None
 ---
 apiVersion: apps/v1
 kind: Deployment
