--- a/volumes.yaml
+++ b/volumes.yaml
@@ -2,6 +2,37 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
+  name: dbdata-chris.farhood.org
+  labels:
+    name: dbdata-chris.farhood.org
+spec:
+  capacity:
+    storage: 8Gi
+  volumeMode: Filesystem
+  accessModes:
+  - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: longhorn
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: dbdata
+  labels:
+    name: dbdata
+spec:
+  accessModes:
+  - ReadWriteOnce
+  storageClassName: longhorn
+  resources:
+    requests: 
+      storage: 8Gi
+  volumeName: dbdata-chris.farhood.org
+
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
   name: wwwdata-chris.farhood.org
   labels:
     name: wwwdata-chris.farhood.org
@@ -21,22 +52,6 @@ spec:
   nfs:
     path: /mnt/pool0/sites/farhood.org/chris
     server: spielberg.farhoodliquor.dmz
-
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: dbdata
-  labels:
-    name: dbdata
-spec:
-  accessModes:
-  - ReadWriteOnce
-  storageClassName: longhorn
-  resources:
-    requests: 
-      storage: 8Gi
-
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
