--- a/volumes.yaml
+++ b/volumes.yaml
@@ -12,7 +12,7 @@ spec:
   accessModes:
   - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: longhorn
+  storageClassName: "longhorn"
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -23,7 +23,7 @@ metadata:
 spec:
   accessModes:
   - ReadWriteOnce
-  storageClassName: longhorn
+  storageClassName: "longhorn"
   resources:
     requests: 
       storage: 8Gi
@@ -43,7 +43,7 @@ spec:
   accessModes:
   - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: nfs
+  storageClassName: "nfs"
   mountOptions:
   - soft
   - nfsvers=4.1
