--- a/volumes.yaml
+++ b/volumes.yaml
@@ -10,7 +10,7 @@ spec:
     storage: 8Gi
   volumeMode: Filesystem
   accessModes:
-  - ReadWriteMany
+  - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
   storageClassName: "longhorn"
 ---
