--- a/volumes.yaml
+++ b/volumes.yaml
@@ -1,21 +1,5 @@
 ---
 apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: dbdata-chris.farhood.org
-  labels:
-    name: dbdata-chris.farhood.org
-    type: local
-spec:
-  capacity:
-    storage: 8Gi
-  volumeMode: Filesystem
-  accessModes:
-  - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Retain
-  storageClassName: "longhorn"
----
-apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: dbdata
@@ -24,11 +8,10 @@ metadata:
 spec:
   accessModes:
   - ReadWriteOnce
-  storageClassName: "longhorn"
+  storageClassName: longhorn
   resources:
     requests: 
       storage: 8Gi
-  volumeName: dbdata-chris.farhood.org
 
 ---
 apiVersion: v1
@@ -53,6 +36,7 @@ spec:
   nfs:
     path: /mnt/pool0/sites/farhood.org/chris
     server: spielberg.farhoodliquor.dmz
+    
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
