--- a/volumes.yaml
+++ b/volumes.yaml
@@ -15,7 +15,23 @@ spec:
   resources:
     requests: 
       storage: 8Gi
-
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: dbdata
+  namespace: chris-farhood-org
+  labels:
+    name: wwwdata
+  annotations:
+    kustomize.toolkit.fluxcd.io/prune: disabled
+spec:
+  accessModes:
+  - ReadWriteOnce
+  storageClassName: longhorn
+  resources:
+    requests: 
+      storage: 32Gi
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -50,7 +66,7 @@ metadata:
   name: wwwdata
   namespace: chris-farhood-org
   labels:
-    name: wwwdata
+    name: wwwdata-old
   annotations:
     kustomize.toolkit.fluxcd.io/prune: disabled
 spec:
