--- a/volumes.yaml
+++ b/volumes.yaml
@@ -15,3 +15,20 @@ spec:
   resources:
     requests: 
       storage: 8Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: wwwdata
+  namespace: chris-farhood-org
+  labels:
+    name: wwwdata
+  annotations:
+    kustomize.toolkit.fluxcd.io/prune: disabled
+spec:
+  accessModes:
+  - ReadWriteOnce
+  storageClassName: longhorn
+  resources:
+    requests: 
+      storage: 128Gi
