--- a/volumes.yaml
+++ b/volumes.yaml
@@ -11,7 +11,7 @@ metadata:
 spec:
   accessModes:
   - ReadWriteOnce
-  storageClassName: longhorn
+  storageClassName: rook-ceph-block-nvme
   resources:
     requests: 
       storage: 8Gi
@@ -28,7 +28,7 @@ metadata:
 spec:
   accessModes:
   - ReadWriteMany
-  storageClassName: longhorn
+  storageClassName: rook-ceph-block-nvme
   resources:
     requests: 
       storage: 128Gi
