--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 namespace: chris-farhood-org
 resources:
   - volumes.yaml
-  - service-mariadb.yaml
-  - service-wordpress.yaml
+  - mariadb.yaml
+  - wordpress.yaml
   - ingress.yaml
   - sealedsecret-mariadb-pass.json
