--- a/volumes.yaml
+++ b/volumes.yaml
@@ -27,7 +27,7 @@ metadata:
     kustomize.toolkit.fluxcd.io/prune: disabled
 spec:
   accessModes:
-  - ReadWriteOnce
+  - ReadWriteMany
   storageClassName: longhorn-perpetual
   resources:
     requests: 
