--- a/wordpress.yaml
+++ b/wordpress.yaml
@@ -35,7 +35,7 @@ spec:
     spec:
       containers:
       - name: wordpress
-        image: wordpress:6-php8.2-fpm
+        image: wordpress:latest
         env:
         - name: WORDPRESS_DB_HOST
           value: mariadb
