--- a/wordpress.yaml
+++ b/wordpress.yaml
@@ -46,19 +46,30 @@ spec:
               key: password
         - name: WORDPRESS_DB_USER
           value: wordpress
-        resources:
-          requests:
-            memory: "512Mi"
-            cpu: "100m"
-          limits:
-            memory: "2Gi"
-            cpu: "500m"
         ports:
         - containerPort: 80
           name: http
         volumeMounts:
         - name: wwwdata
           mountPath: "/var/www/html"
+        securityContext:
+          allowPrivilegeEscalation: false
+          runAsNonRoot: true
+        resources:
+          requests:
+            memory: "128Mi"
+            cpu: "100m"
+          limits:
+            memory: "256Mi"
+            cpu: "500m"
+        livenessProbe:
+          httpGet:
+            path: /
+            port: http
+        readinessProbe:
+          httpGet:
+            path: /
+            port: http
       volumes:
       - name: wwwdata
         persistentVolumeClaim:
