separating service and deployment for wordpress to make it more modular

--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -4,6 +4,7 @@ namespace: chris-farhood-org
 resources:
   - volumes.yaml
   - mariadb.yaml
-  - wordpress.yaml
+  - wordpress-deployment.yaml
+  - wordpress-service.yaml
   - ingress.yaml
   - sealedsecret-mariadb-pass.json
