--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -3,9 +3,9 @@ kind: Kustomization
 namespace: chris-farhood-org
 resources:
   - volumes.yaml
-  - deployment-mariadb.yaml
-  - service-mariadb.yaml
-  - deployment-wordpress.yaml
-  - service-wordpress.yaml
-  - ingress.yaml
+#  - deployment-mariadb.yaml
+#  - service-mariadb.yaml
+#  - deployment-wordpress.yaml
+#  - service-wordpress.yaml
+#  - ingress.yaml
   - sealedsecret-mariadb-pass.json
