--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: chris-farhood-org
 resources:
-  - volumes.yaml
+#  - volumes.yaml
 #  - deployment-mariadb.yaml
 #  - service-mariadb.yaml
 #  - deployment-wordpress.yaml
